# WhirlpoolAcControl

./: .gitignore  CMakeLists.txt  Jenkinsfile  WhirlpoolAcControl.ino  arduino-cli.yaml  git_rev_macro.py  platformio.ini
Documentation/rPI/Receive/: PulseDistanceCoding.py  README.md  TesterPulseDistanceCoding.data  TesterPulseDistanceCoding.py  Whirlpool_YJ1B.py  mode2PulseDistanceCoding.py
Documentation/rPI/Sender/: Readme.txt
Test/: README.md  TesterPulseDistanceCoding.py  Whirlpool_YJ1B.py  mode2PulseDistanceCoding.py
Test/Receive/: PulseDistanceCoding.py  README.md  Whirlpool_YJ1B.py  mode2PulseDistanceCoding.py
Test/Sender/: Readme.txt  pyslinger.py
cmake/toolchain/: clang.cmake  msvc.cmake
data/: config.json
include/: stdex.hpp
lib/NTPClient/: NTPClient.cpp  NTPClient.h
src/: CMakeLists.txt  Config.cpp  Config.hpp  DHTSensor.cpp  DHTSensor.hpp  IRReceive.hpp  IRremoteInt.h  MqttMessages.cpp  MqttMessages.hpp  Whirlpool_YJ1B.cpp  Whirlpool_YJ1B.hpp  WifiParameters.cpp  WifiParameters.hpp  main.cpp
src/IRremote/: IRFeedbackLED.hpp  IRReceive.hpp  IRSend.hpp  IRremote.hpp  IRremoteInt.h  ir_DistanceProtocol.hpp
src/MqttMessages/: MqttMessages.cpp  MqttMessages.hpp
src/Whirlpool_YJ1B/: Whirlpool_YJ1B.cpp  Whirlpool_YJ1B.hpp
src/libraries/IRremote/: IRremote.h  ir_DistanceProtocol.cpp
src/src/IRremote/: IRFeedbackLED.hpp
src/src/MqttMessages/: MqttMessages.cpp  MqttMessages.hpp
src/src/Whirlpool_YJ1B/: Whirlpool_YJ1B.cpp
test/: Whirlpool_YJ1BTest.cpp
tests/: CMakeLists.txt  Whirlpool_YJ1BTest.cpp
